--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 # Zac's tmux Config File
 # store in the home directory as .tmux.conf
 # Based on Jay LaCroix's Config File from learnlinux.tv.  
-# Version 1.5
-# Date: 2025-1-15
+# Version 1.6
+# Date: 2025-1-26
 
 # Set a reload key for the tmux config to reload
 bind-key r source-file ~/.tmux.conf \; display-message "!! tmux.conf reloaded !!"
@@ -61,7 +61,7 @@ set-option -g repeat-time 0
 set -sg escape-time 0
 
 # Set Terminal Override and Default Editor for Moving the Cursor (Cult of VIM)
-set -g default-terminal xterm-256color
+set -g default-terminal tmux-256color
 set -g status-keys vi
 
 # Set the base-index to 1 rather than 0
@@ -78,7 +78,7 @@ set -g @plugin 'dracula/tmux'
 
 # Dracula Configuration
 set -g @dracula-plugins "cpu-usage ram-usage time"
-set -g @dracula-show-left-icon "#H | #S | #W"
+set -g @dracula-show-left-icon "#H | #S"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
