--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,13 @@
 # Zac's tmux Config File
 # store in the home directory as .tmux.conf
 # Based on Jay LaCroix's Config File from learnlinux.tv.  
-# Version 1.6
-# Date: 2025-1-26
+# Version 1.7
+# Date: 2025-1-27
+
+# Just as a note.  If you can't get copy/paste to work (like in ParrotOS or Kali), a trick I found works is:
+# Install xclip
+# put an alias in .bashrc `tmc='tmux show-buffer | xclip -selection clipboard'
+# this will copy the selection to the system clipboard.  
 
 # Set a reload key for the tmux config to reload
 bind-key r source-file ~/.tmux.conf \; display-message "!! tmux.conf reloaded !!"
