--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,17 @@
 # put an alias in .bashrc `tmc='tmux show-buffer | xclip -selection clipboard'
 # this will copy the selection to the system clipboard.  
 
+#Another thing, you will want to write the following code into your .profile file if you find Tmux is not 
+#sourcing .bashrc.  Make sure to take out the # marks (unless its ## then it is a comment).  
+#
+## if running bash
+#if [ -n "$BASH_VERSION" ]; then
+#    # include .bashrc if it exists
+#    if [ -f "$HOME/.bashrc" ]; then
+#    . "$HOME/.bashrc"
+#fi
+#fi
+
 # Set a reload key for the tmux config to reload
 bind-key r source-file ~/.tmux.conf \; display-message "!! tmux.conf reloaded !!"
 
