--- a/tmux.conf
+++ b/tmux.conf
@@ -1,24 +1,8 @@
 # Zac's tmux Config File
 # store in the home directory as .tmux.conf
 # Based on Jay LaCroix's Config File from learnlinux.tv.  
-# Version 1.7
-# Date: 2025-1-27
-
-# Just as a note.  If you can't get copy/paste to work (like in ParrotOS or Kali), a trick I found works is:
-# Install xclip
-# put an alias in .bashrc `tmc='tmux show-buffer | xclip -selection clipboard'
-# this will copy the selection to the system clipboard.  
-
-#Another thing, you will want to write the following code into your .profile file if you find Tmux is not 
-#sourcing .bashrc.  Make sure to take out the # marks (unless its ## then it is a comment).  
-#
-## if running bash
-#if [ -n "$BASH_VERSION" ]; then
-#    # include .bashrc if it exists
-#    if [ -f "$HOME/.bashrc" ]; then
-#    . "$HOME/.bashrc"
-#fi
-#fi
+# Version 1.5
+# Date: 2025-1-15
 
 # Set a reload key for the tmux config to reload
 bind-key r source-file ~/.tmux.conf \; display-message "!! tmux.conf reloaded !!"
@@ -49,7 +33,7 @@ bind-key -n C-S-Right swap-window -t +1
 bind-key y set-window-option synchronize-panes\; display-message "synchronize mode toggled."
 
 # Rebind the k key to kill a darn window
-bind-key k kill-window 
+bind-key -n k kill-window 
 
 # Key bindings for copy-paste
 setw -g mode-keys vi
@@ -77,7 +61,7 @@ set-option -g repeat-time 0
 set -sg escape-time 0
 
 # Set Terminal Override and Default Editor for Moving the Cursor (Cult of VIM)
-set -g default-terminal tmux-256color
+set -g default-terminal xterm-256color
 set -g status-keys vi
 
 # Set the base-index to 1 rather than 0
@@ -94,7 +78,7 @@ set -g @plugin 'dracula/tmux'
 
 # Dracula Configuration
 set -g @dracula-plugins "cpu-usage ram-usage time"
-set -g @dracula-show-left-icon "#H | #S"
+set -g @dracula-show-left-icon "#H | #S | #W"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
