--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,13 @@
 # Zac's tmux Config File
 # store in the home directory as .tmux.conf
 # Based on Jay LaCroix's Config File from learnlinux.tv.  
-# Version 1.5
-# Date: 2025-1-15
+# Version 1.8
+# Date: 2025-2-22
+
+# Just as a note.  If you can't get copy/paste to work (like in ParrotOS or Kali), a trick I found works is:
+# Install xclip
+# put an alias in .bashrc `tmc='tmux show-buffer | xclip -selection clipboard'
+# this will copy the selection to the system clipboard.  
 
 # Set a reload key for the tmux config to reload
 bind-key r source-file ~/.tmux.conf \; display-message "!! tmux.conf reloaded !!"
@@ -33,7 +38,7 @@ bind-key -n C-S-Right swap-window -t +1
 bind-key y set-window-option synchronize-panes\; display-message "synchronize mode toggled."
 
 # Rebind the k key to kill a darn window
-bind-key -n k kill-window 
+bind-key k kill-window 
 
 # Key bindings for copy-paste
 setw -g mode-keys vi
@@ -61,7 +66,7 @@ set-option -g repeat-time 0
 set -sg escape-time 0
 
 # Set Terminal Override and Default Editor for Moving the Cursor (Cult of VIM)
-set -g default-terminal xterm-256color
+set -g default-terminal tmux-256color
 set -g status-keys vi
 
 # Set the base-index to 1 rather than 0
@@ -78,7 +83,21 @@ set -g @plugin 'dracula/tmux'
 
 # Dracula Configuration
 set -g @dracula-plugins "cpu-usage ram-usage time"
-set -g @dracula-show-left-icon "#H | #S | #W"
+set -g @dracula-show-left-icon "#H | #S"
 
+# Turn Local Tmux Prefix Off/On when working with SSH sessions that also have tmux.
+bind -T root F12  \
+  set prefix None \;\
+  set key-table off \;\
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+  display-message "Local Prefix Off" \;\
+  refresh-client -S
+
+bind -T off F12 \
+  set -u prefix \;\
+  set -u key-table \;\
+  display-message "Local Prefix On" \;\
+  refresh-client -S
+  
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
